# musicgen-endpoint-ableton

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/scripts/: first_time_setup.sh
.github/workflows/: endpoint-destroy.yaml  endpoint-plan-destroy.yaml  endpoint-plan.yaml  endpoint-provision.yaml  helpers-set-environment-configuration-file.yaml  helpers-terraform-execute-template.yaml  lambda-destroy.yaml  lambda-provision.yaml  terraform-validate.yaml
aws/endpoint/container/: Dockerfile  build_and_publish.sh
aws/endpoint/lambda/public_endpoint/: .gitignore  app.py  requirements.txt
aws/endpoint/model/: README.md  create_tar.sh
aws/endpoint/notebooks/: deployment.ipynb
aws/endpoint/notebooks/optimize_scaling/: README.md  optimize_endpoint_scaling.ipynb
aws/endpoint/src/artifacts/: .gitignore  download_artifacts.py
aws/endpoint/src/code/: inference.py  requirements.txt
aws/endpoint/src/helpers/: helpers.py  utils.py
aws/endpoint/tests/: test_inference.py  utils.py
aws/terraform/provision_ec2/: .gitignore  README.md
aws/terraform/provision_ec2/src/: .terraform.lock.hcl  config.tfvars  locals.tf  main.tf  provision_ec2.tf  variables.tf
aws/terraform/provision_endpoint/: README.md
aws/terraform/provision_endpoint/.devcontainer/: devcontainer.json
aws/terraform/provision_endpoint/.templates/: config-template.yaml
envs/: chalice.yaml  dev.yaml  prod.yaml
m4l/: Musicgen.amxd  musicgen.js
requirements/: chalice.in  chalice.txt  dev.in  dev.txt  prod.in  prod.txt
scripts/: compile_envs.sh  compile_requirements.sh  init.sh
(+19 files in other folders)
